[gd_scene load_steps=2 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ReadyScreen" type="Control" parent="."]
anchor_right = 0.329
anchor_bottom = 0.32
margin_left = 387.0
margin_top = 173.0
margin_right = 306.104
margin_bottom = 235.0

[node name="Panel" type="Panel" parent="ReadyScreen"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ReadyButton" type="Button" parent="ReadyScreen"]
margin_left = 34.0
margin_top = 226.0
margin_right = 228.0
margin_bottom = 246.0
text = "Ready!"

[node name="VBoxContainer" type="VBoxContainer" parent="ReadyScreen"]
margin_left = 23.0
margin_top = 21.0
margin_right = 231.0
margin_bottom = 215.0

[node name="ConnectingScreen" type="Control" parent="."]
margin_left = 384.0
margin_top = 172.0
margin_right = 639.0
margin_bottom = 428.0

[node name="Panel" type="Panel" parent="ConnectingScreen"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="RichTextLabel" type="RichTextLabel" parent="ConnectingScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -46.5
margin_top = -14.0
margin_right = 60.5
margin_bottom = 26.0
text = "Connecting..."

[node name="MatchMaking" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -127.5
margin_top = -127.5
margin_right = 127.5
margin_bottom = 127.5

[node name="Panel" type="Panel" parent="MatchMaking"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="StartMatchMaking" type="Button" parent="MatchMaking"]
margin_left = 20.5
margin_top = 211.5
margin_right = 237.5
margin_bottom = 245.5
text = "Start Match Making"

[node name="RichTextLabel" type="RichTextLabel" parent="MatchMaking"]
margin_left = 43.5
margin_top = 81.5
margin_right = 114.5
margin_bottom = 108.5
text = "Name:"

[node name="Username" type="LineEdit" parent="MatchMaking"]
margin_left = 97.0
margin_top = 79.0
margin_right = 231.0
margin_bottom = 103.0
text = "Name"

[connection signal="button_down" from="ReadyScreen/ReadyButton" to="." method="_on_ReadyButton_button_down"]
[connection signal="button_down" from="MatchMaking/StartMatchMaking" to="." method="_on_StartMatchMaking_button_down"]
